# TruLedgr-API

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  app.py  demo_version.py  pyproject.toml  test_ulid.py  test_ulid_manual.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1ff572a223ab_add_auth_models.py  2d68aea1a624_switch_to_ulid_primary_keys.py  49d0a2c5c7e6_complete_schema_with_logical_table_.py  7c9f232a6d59_initial_migration_with_user_model.py
docs/: DATABASE_SETUP.md  MIGRATIONS.md  impersonation-summary.md  impersonation.md  session-design-analysis.md
migrations/: add_impersonation.py
scripts/: make_admin.py
tests/: test_account.py  test_category.py  test_database.py  test_health.py  test_impersonation.py  test_impersonation_integration.py  test_server.py  test_users.py
truledgr_api/: __init__.py  config.py  database.py  main.py
truledgr_api/apps/: __init__.py  accounts.py  auth.py  categories.py  institutions.py  main.py  payees.py  transactions.py  users.py
truledgr_api/auth/: __init__.py
truledgr_api/models/: __init__.py  account.py  auth.py  category.py  institution.py  payee.py  transaction.py  user.py
truledgr_api/routers/: accounts.py  auth.py  categories.py  health.py  institutions.py  payees.py  transactions.py  users.py
truledgr_api/utils/: auth.py  oauth.py
